--- a/Frontend/src/components/ChatWindow.css
+++ b/Frontend/src/components/ChatWindow.css
@@ -9,6 +9,7 @@
     background-position: center;
     background-image: url('https://res.cloudinary.com/dfa7zee9i/image/upload/s--TB-F7xJo--/f_auto,q_auto/Background_dethfh');
     transition: background-image 0.5s ease-in-out;
+    -webkit-overflow-scrolling: touch;
   }
 
   .loader-container {
@@ -175,9 +176,14 @@
     color: var(--text-dark); /* Darker text color for readability */
   }
 
-  .scroll-to-bottom-btn {
+  .scroll-to-bottom-container {
     position: sticky;
-    bottom: 50px;
+    bottom: 50px; /* Adjusted for better placement */
+    align-self: flex-end;
+    z-index: 100; /* Ensuring it stays above other content */
+  }
+  
+  .scroll-to-bottom-btn {
     align-self: flex-end;
     background-color: #25D366; /* WhatsApp green */
     color: white;
@@ -202,6 +208,22 @@
   .scroll-to-bottom-btn i {
     font-size: 20px;
     transition: transform 0.3s;
+  }
+  
+  .message-counter {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    font-weight: bold;
   }
 
   .transparent-modal .modal-content {
