--- a/Frontend/src/components/Register.css
+++ b/Frontend/src/components/Register.css
@@ -22,7 +22,7 @@
   }
   
   
-  .input-group {
+  .input-group-register {
     margin-bottom: 15px;
     width: 100%;
     position: relative;
@@ -197,7 +197,7 @@
     margin-top: 5px;
   }
   
-  .input-group.file-input {
+  .input-group-register.file-input {
     position: relative;
     display: flex;
     flex-direction: column;
