--- a/Frontend/src/components/WaveformPlayer.css
+++ b/Frontend/src/components/WaveformPlayer.css
@@ -11,7 +11,7 @@
 }
   
    
-  .play-pause-button {
+  .play-pause-button-wave {
     background: none;
     border: none;
     cursor: pointer;
@@ -22,7 +22,7 @@
     align-items: center; /* Center icon vertically */
   }
   
-  .play-pause-button:hover {
+  .play-pause-button-wave:hover {
     color: #357abd;
   }
   
@@ -46,4 +46,34 @@
     border-radius: 15px; /* Slightly smaller border radius */
 }
 
+
+@media (min-width: 768px) {
+    .playback-speed-control button {
+        padding: 5px 15px; /* Increase padding */
+        font-size: 14px;    /* Slightly larger font size */
+        border-radius: 20px; /* Increase border radius */
+    }
+}
+
+/* Smaller screens (like phones) */
+@media (max-width: 480px) {
+    .playback-speed-control button {
+        padding: 2px 8px;  /* Decrease padding */
+        font-size: 10px;    /* Smaller font size */
+        border-radius: 12px; /* Smaller border radius */
+    }
+}
+
+
+@media (max-width: 768px) {
+  .play-pause-button-wave {
+    font-size: 20px; /* Reduce size on smaller screens */
+  }
+}
+
+@media (max-width: 480px) {
+  .play-pause-button-wave {
+    font-size: 18px; /* Further reduce size on very small screens */
+  }
+}
   
