--- a/Frontend/src/components/ChatHeader.css
+++ b/Frontend/src/components/ChatHeader.css
@@ -60,7 +60,7 @@
   .chat-details {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
   }
 
   @media (min-height: 791px) {
