--- a/Frontend/src/components/MediaMessagesModal.css
+++ b/Frontend/src/components/MediaMessagesModal.css
@@ -5,11 +5,12 @@
     padding: 10px;
 }
 
+
 /* Responsive grid for media items */
 .media-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(80px, 1fr)); /* Minimum column width of 80px */
-    gap: 10px; /* Reduced gap for smaller screens */
+    grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
+    gap: 10px;
     padding: 10px;
 }
 
@@ -30,26 +31,17 @@
 /* Responsive date header font size */
 .date-header-media-modal {
     font-weight: bold;
-    font-size: 14px;
-    color: #666;
-    text-align: center;
-    margin-bottom: 10px;
-    text-align: center;
-    margin: 10px auto;
-    width: 100px;
-    color: black; /* More neutral color */
     font-size: 0.85em;
+    color: black;
+    background-color: #c5dcff;
+    padding: 5px 10px;
+    border-radius: 10px;
+    margin: 10px auto;
+    text-align: center;
+    width: fit-content;
     position: sticky;
     top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #c5dcff; /* Light grey background */
-    padding: 5px 10px;
     z-index: 1;
-    border-radius: 10px;
-    border: none; /* Removed for a cleaner look */
-    box-shadow: none; /* Removed for a cleaner look */
-    white-space: nowrap;
 }
 
 .no-more-media {
@@ -102,7 +94,7 @@
 
 .media-message-item img,
 .media-message-item video,
-.media-message-item audio {
+.media-message-item iframe {
     position: absolute;
     top: 0;
     left: 0;
@@ -116,11 +108,9 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    padding: 8px;
     background-color: #f5f5f5;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 300px;
+    padding: 8px;
 }
 
 @media (max-width: 480px) {
@@ -144,13 +134,10 @@
 .modal-footer-media-message {
     display: flex;
     justify-content: center;
-    align-items: center;
     background-color: #f8f9fa;
     padding: 15px;
-    font-size: 16px;
     font-weight: 600;
     color: #333;
-    border-top: 1px solid #dee2e6;
 }
 
 @media (max-width: 600px) {
